# coinbase-historic-candlestick-scraper

./: historic_candle_stick_data.py  readme.md  requirements.txt  setup.cfg
coinbase_historic_candlestick_data_scraper/: __main__.py  candlestick_scraper.py  config.py
