[metadata]
name = coinbase_historic_candlestick_data_scraper
version = 0.0.1
url = https://github.com/silktown-software/coinbase-historic-candlestick-scraper
license = WTFPL
author = Silktown Software
author_email = contact@silktown.software
description = Uses the coinbase api to get historic candlestick data
long_description = file: README.md

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = coinbase_historic_candlestick_data_scraper
install_requires =
    cbpro~=1.1.4
    pandas~=1.2.2
    pymongo~=3.5.1
    tqdm~=4.58.0

[options.entry_points]
console_scripts =
    cb-candlesticks = coinbase_historic_candlestick_data_scraper.candlestick_scraper:scrape_candlestick_data