[metadata]
name = coinbase_historic_candlestick_data_scraper
version = 0.0.1
url =
license = WTFPL
author = Luke Robbins
author_email = lrobbins@sunstripe.uk
description =
long_description = file: README.md

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = coinbase_historic_candlestick_data_scraper
install_requires =
    cbpro==1.1.4
    numpy==1.20.1
    pandas==1.2.2
    pymongo==3.5.1
    python-dateutil==2.8.1
    pytz==2021.1
    requests==2.13.0
    six==1.10.0
    sortedcontainers==2.3.0
    tqdm==4.56.2
    websocket-client==0.40.0

[options.entry_points]
console_scripts =
    cb-candlesticks = coinbase_historic_candlestick_data_scraper.candlestick_scraper:scrape_candlestick_data